--- a/web/css/fore/style.css
+++ b/web/css/fore/style.css
@@ -94,7 +94,8 @@ div.categoryWithCarousel {
 
 div.carouselBackgroundDiv{
 	width:100%;
-	height:510px;
+	/*height:510px;*/
+	height:540px;
 	background-color: #E8E8E8;
 	position: absolute;
 	top:36px;
@@ -109,7 +110,8 @@ div.categoryWithCarousel div.headbar {
 
 div.carousel-of-product {
 	width: 1024px;
-	height: 510px;
+	/*height: 510px;*/
+	height: 540px;
 	margin:0px auto;
 }
 div.carousel-inner div.item img{
@@ -129,7 +131,7 @@ div.categoryWithCarousel div.categoryMenu {
 
 div.categoryWithCarousel div.productsAsideCategorys {
 	width: 825px;
-	height: 510px;
+	height: 540px;
 	background-color: white;
 	/* 	padding-bottom:10px; */
 	margin-left: 220px;
@@ -330,7 +332,6 @@ div.footer {
 	margin: 0px 0px;
 	border-top-style: solid;
 	border-top-width: 1px;
-	border-top-color: solid;
 	border-top-color: #e7e7e7;
 }
 
@@ -379,7 +380,6 @@ div.copyright {
 	background-color: black;
 	border-top-style: solid;
 	border-top-width: 2px;
-	border-top-color: solid;
 	border-top-color: #C40000;
 }
 
@@ -1007,7 +1007,8 @@ span.productReviewTopReviewLinkNumber {
 }
 
 div.productDetailImagesPart img {
-	display: block; margin 20px 0px;
+	display: block;
+	margin: 20px 0px;
 	width: 790px;
 }
 
@@ -1300,13 +1301,13 @@ textarea.leaveMessageTextarea {
 }
 
 span.leaveMessageText {
-	display: inilne-block;
+	display: inline-block;
 	margin-right: 10px;
 	float: left;
 }
 
 span.leaveMessageTextareaSpan {
-	display: inilne-block;
+	display: inline-block;
 }
 
 div.orderItemTotalSumDiv {
